# tittat

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  build_web.bat  build_win32.bat  license.txt  readme.md
source/: misc_pasta.c  misc_pasta.h  shell.html  tittat.c  tittat_config.h.in
upstream/: CMakeLists.txt
